k8s/kyverno/04_mutate_limits.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-limits-dev
spec:
  rules:
    - name: mutate-limits-dev
      match:
        all:
          - resources:
              kinds:
                - Pod
              selector:
                matchLabels:
                  target: dev
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                resources:
                  limits:
                    memory: "256Mi"
                    cpu: "500m"
